--- a/TienXuLy_KhamPha/tien_xu_ly_va_kham_pha.ipynb
+++ b/TienXuLy_KhamPha/tien_xu_ly_va_kham_pha.ipynb
@@ -507,13 +507,25 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Xóa các dòng trùng nhau\n",
+    "def drop_sample_same(df):\n",
+    "    df.drop_duplicates(inplace=True)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1840 entries, 0 to 1839\n",
+      "Int64Index: 1840 entries, 0 to 1839\n",
       "Data columns (total 10 columns):\n",
       " #   Column              Non-Null Count  Dtype  \n",
       "---  ------              --------------  -----  \n",
@@ -528,13 +540,14 @@
       " 8   Solar (TWh)         1805 non-null   float64\n",
       " 9   Wind (TWh)          1817 non-null   float64\n",
       "dtypes: float64(8), int64(1), object(1)\n",
-      "memory usage: 143.9+ KB\n"
+      "memory usage: 158.1+ KB\n"
      ]
     }
    ],
    "source": [
     "#Test\n",
     "df = drop_missing_features(df, num_col_info_df.iloc[0], threshold = 75.0)\n",
+    "df=drop_sample_same(df)\n",
     "df.info()"
    ]
   },
@@ -547,11 +560,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = df.dropna(thresh=3) #Chỉ giữ lại các hàng có tối thiểu 3 giá trị, vì 2 giá trị thì chỉ có Country và Year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 1817 entries, 0 to 1839\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   Country             1817 non-null   object \n",
+      " 1   Year                1817 non-null   int64  \n",
+      " 2   Fossil fuels (TWh)  1697 non-null   float64\n",
+      " 3   Coal (TWh)          1762 non-null   float64\n",
+      " 4   Oil (TWh)           1817 non-null   float64\n",
+      " 5   Gas (TWh)           1752 non-null   float64\n",
+      " 6   Renewables (TWh)    1639 non-null   float64\n",
+      " 7   Hydropower (TWh)    1639 non-null   float64\n",
+      " 8   Solar (TWh)         1805 non-null   float64\n",
+      " 9   Wind (TWh)          1817 non-null   float64\n",
+      "dtypes: float64(8), int64(1), object(1)\n",
+      "memory usage: 156.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info() # Lúc này nó xóa đi hàng là nước Liên Bang Xô Viết thì phải vì không có nước này trong thế kỉ 21"
    ]
   },
   {
@@ -563,24 +609,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def filling_missing_value(df: pd.DataFrame) -> pd.DataFrame:\n",
-    "    # YOUR CODE HERE\n",
-    "    # Replace all None values with NaN\n",
+    "    # Thay thế các giá trị None bằng NaN\n",
     "    df = df.replace({None: np.nan})\n",
     "\n",
-    "    # Fill NaN values with the mean of the column values\n",
-    "    for i in df.columns[df.isnull().any(axis=0)]:    \n",
-    "        df[i].fillna(round(df[i].mean(),1),inplace=True)\n",
-    "    return df"
+    "    # Lấy ra các cột không phải Country và Yeaar để điền các vị trí cần thiết\n",
+    "    columns_to_fill = df.columns.difference(['Country', 'Year'])\n",
+    "    for column in columns_to_fill:\n",
+    "        # Ứng với các cột đang thiếu, thì group theo năm rồi, rồi tính trung bình của cột đó trong 1 năm\n",
+    "        # Tức là year_mean chứa 23 dòng á, mỗi dòng là tương ứng với năm và năng lượng trung bình sử dụng loại column trong năm đó.\n",
+    "        year_mean = df.groupby('Year')[column].mean()\n",
+    "\n",
+    "        # Vòng lặp duyệt qua từng năm unique() trong df\n",
+    "        for year in df['Year'].unique():\n",
+    "            # Trong từng năm đó thì lấy cột là column từ df ra, rồi chỉ giữ lại những hàng có df['Year']=year thôi\n",
+    "            year_data = df[df['Year'] == year][column]\n",
+    "            \n",
+    "            if year_data.isnull().any():\n",
+    "                # Lấy giá trị mean_value được tính ở trên từ year_mean\n",
+    "                mean_value = year_mean[year]\n",
+    "                \n",
+    "                # tương tự như trên và điền vào các giá trị thiếu thôi\n",
+    "                df.loc[(df['Year'] == year) & (df[column].isnull()), column] = mean_value\n",
+    "\n",
+    "    return df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +649,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 1817 entries, 0 to 1839\n",
+      "Int64Index: 1817 entries, 0 to 1839\n",
       "Data columns (total 10 columns):\n",
       " #   Column              Non-Null Count  Dtype  \n",
       "---  ------              --------------  -----  \n",
@@ -615,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +798,7 @@
        "4               5.0               5.0          0.0         0.0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -835,7 +896,7 @@
        "value_ratios   {'2000': 4.3, '2012': 4.3, '2021': 4.3, '2020': 4.3, '2019': 4.3, '2018': 4.3, '2017': 4.3, '201...  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +977,7 @@
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -927,7 +988,7 @@
        "      <td>0.00</td>\n",
        "      <td>7.20</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -938,7 +999,7 @@
        "      <td>8.71</td>\n",
        "      <td>84.35</td>\n",
        "      <td>42.81</td>\n",
-       "      <td>14.0</td>\n",
+       "      <td>14.000000</td>\n",
        "      <td>7.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -949,20 +1010,20 @@
        "      <td>45.76</td>\n",
        "      <td>170.23</td>\n",
        "      <td>162.09</td>\n",
-       "      <td>57.0</td>\n",
+       "      <td>57.000000</td>\n",
        "      <td>34.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>upper_quartile</th>\n",
-       "      <td>1504.0</td>\n",
+       "      <td>1441.0</td>\n",
        "      <td>228.96</td>\n",
        "      <td>543.34</td>\n",
-       "      <td>411.30</td>\n",
-       "      <td>184.7</td>\n",
-       "      <td>123.4</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>428.38</td>\n",
+       "      <td>151.830986</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -971,7 +1032,7 @@
        "      <td>24559.49</td>\n",
        "      <td>11214.08</td>\n",
        "      <td>8812.12</td>\n",
-       "      <td>7093.0</td>\n",
+       "      <td>7093.000000</td>\n",
        "      <td>3471.0</td>\n",
        "      <td>1115.0</td>\n",
        "      <td>1988.0</td>\n",
@@ -986,19 +1047,19 @@
        "min                           12.0        0.00       7.20       0.00   \n",
        "lower_quartile               202.0        8.71      84.35      42.81   \n",
        "median                       542.0       45.76     170.23     162.09   \n",
-       "upper_quartile              1504.0      228.96     543.34     411.30   \n",
+       "upper_quartile              1441.0      228.96     543.34     428.38   \n",
        "max                        36319.0    24559.49   11214.08    8812.12   \n",
        "\n",
        "                Renewables (TWh)  Hydropower (TWh)  Solar (TWh)  Wind (TWh)  \n",
-       "missing_ratio                0.0               0.0          0.0         0.0  \n",
-       "min                          0.0               0.0          0.0         0.0  \n",
-       "lower_quartile              14.0               7.0          0.0         0.0  \n",
-       "median                      57.0              34.0          0.0         0.0  \n",
-       "upper_quartile             184.7             123.4          2.0         7.0  \n",
-       "max                       7093.0            3471.0       1115.0      1988.0  "
+       "missing_ratio           0.000000               0.0          0.0         0.0  \n",
+       "min                     0.000000               0.0          0.0         0.0  \n",
+       "lower_quartile         14.000000               7.0          0.0         0.0  \n",
+       "median                 57.000000              34.0          0.0         0.0  \n",
+       "upper_quartile        151.830986             110.0          1.0         7.0  \n",
+       "max                  7093.000000            3471.0       1115.0      1988.0  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1027,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +1097,7 @@
        "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1054,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,7 +1141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
